pages/base/base.css
/* ... */
.ui-slider-track-bottomup .ui-btn.ui-slider-handle,
.ui-slider-track-vertical .ui-btn.ui-slider-handle {
  width: 28px;
  height: 24px;
  margin: -12px 0 0 -7.6px;
}

.slider-vertical-scale,
.slider-bottomup-scale {
  position: relative;
  top: 3px;
  margin-right: -10px;
}


.ui-slider-semicircle-box {
  position: relative;
  display: inline-block;
  margin-bottom: 10px;
}

.ui-slider-semicircle-box .ui-slider-track.ui-slider-track-semicircle {
  width: 150px;
  height: 75px;
  padding: 0;
  margin: 0;
  overflow: hidden;
  position: static;
  -moz-border-radius: 10em 10em 0 0;
  -webkit-border-radius: 10em 10em 0 0;
  border-radius: 10em 10em 0 0;
  border-bottom: none;
}

.ui-slider-track.ui-slider-track-semicircle .ui-slider-bg {
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
}

.ui-slider-track-semicircle .ui-btn.ui-slider-handle,
a.ui-slider-handle-semicircle {
  position: absolute;
  margin-top: -5px;
  margin-left: -5px;
  top: 50%;
  left: 0;
  -moz-border-radius: 10em 10em 10em 10em;
  -webkit-border-radius: 10em 10em 10em 10em;
  border-radius: 10em 10em 10em 10em;
}

.ui-slider-semicircle-inner {
  position: absolute;
  width: 118px;
  height: 59px;
  margin: 15px 15px 0;
  border: 1px solid #000;
  border-bottom: none;
  -moz-border-radius: inherit;
  -webkit-border-radius: inherit;
  border-radius: inherit;
}

.ui-slider-semicircle-bottom {
  width: 15px;
  height: 10px;
  margin: 0 0 0 -1px;
  position: absolute;
  top: 100%;
  border: 1px solid #000;
  border-top: none;
  background-size: 1000px;
  background-position: left bottom;
  overflow: hidden;
  -moz-border-radius: 0 0 2em 2em;
  -webkit-border-radius: 0 0 2em 2em;
  border-radius: 0 0 2em 2em;
}

.ui-slider-semicircle-bottom .ui-btn-active {
  background-size: inherit;
  background-position: inherit;
}

/* value display type */
.ui-slider-handle-info .ui-slider-track {
    margin: 0 15px 12px;
}
.ui-slider-handle-info.ui-slider-track-bottomup .ui-btn.ui-slider-handle,
.ui-slider-handle-info.ui-slider-track-vertical .ui-btn.ui-slider-handle {
    line-height: 22px;
}


input.ui-slider-input.ui-slider-no-input {
    visibility: hidden;
}
input.ui-slider-input.ui-slider-no-input[orientation='semicircle'] {
    display: none;
}
.ui-slider-track.ui-slider-no-input {
    margin-left: 15px;
}

/** --------- flip --------- */
/* corection because ui-slider is now dynamic */
.ui-slider.ui-slider-switch {
  height: 32px;
}

/** --------- grid --------- */
.ui-grid-f {
  overflow: hidden;
}

.ui-block-f, .ui-block-g {
  margin: 0;
  padding: 0;
  border: 0;
  float: left;
  min-height: 1px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

.ui-grid-f .ui-block-a, .ui-grid-f .ui-block-b, .ui-grid-f .ui-block-c, .ui-grid-f .ui-block-d, .ui-grid-f .ui-block-e, .ui-grid-f .ui-block-f, .ui-grid-f .ui-block-g {
  width: 14%;
}

.ui-grid-f > :nth-child(n) {
  width: 14%;
}

.ui-grid-f .ui-block-a {
  clear: left;
}

/* TODO: Move to listview? */
.ui-listview > li h1,
.ui-listview > li h2,
.ui-listview > li h3,
.ui-listview > li h4,
.ui-listview > li h5,
.ui-listview > li h6 {
  overflow: visible;
}

/**
 * ----------------------------------------------------------------------------
 */
.smartvisu {
  padding: 0 0 4px 0;
  font-size: 1.1em;
}

.smartvisu .smart {
  padding: 1px 3px 1px 2px;
  text-shadow: none;
  font-weight: 200;
}

.smartvisu .visu {
  padding: 1px 4px 1px 4px;
  background-color: #fff;
  font-weight: bold;
  text-shadow: none;
  color: #000;
  -moz-border-radius: .2em;
  -webkit-border-radius: .2em;
  border-radius: .2em;
  background: #fff;
  background-image: -webkit-gradient(linear, left, left bottom, from(#fff), to(#ccc));
  background-image: -webkit-linear-gradient(left, #fff, #ccc);
  background-image: -moz-linear-gradient(left, #fff, #ccc);
  background-image: -ms-linear-gradient(left, #fff, #ccc);
  background-image: -o-linear-gradient(left, #fff, #ccc);
  background-image: linear-gradient(left, #fff, #ccc);
}

/* used in ui-content, because we want the color from ui-page */
.page-bg {
  background: no-repeat fixed bottom;
}

.preblock {
  width: 100%;
  text-align: center;
  margin-bottom: 15px;
}

.preblock .ui-btn {
  min-width: 64px;
}

.block {
  width: 100%;
  text-align: center;
}

@media all and (min-width: 900px) {
  .block {
    width: 50%;
    float: left;
    display: table; /* prevents rounding problems with 0.7em/1.3em */
  }
}

.block .image {
  margin: 0 5px 13px 5px;
}

.block .image img {
  width: 100%;
}

.block .image + .mini {
  text-align: left;
  margin: -10px 0 10px 10px;
}

.block .ui-collapsible-set {
  margin: 5px 5px 13px 3px;
}

.block .set-1 .ui-collapsible-content {
  min-height: 14.5em;
  padding: 10px 5px 10px 5px;
}

.block .set-2 .ui-collapsible-content {
  min-height: 12.22em;
  padding: 10px 5px 10px 5px;
}

.block .set-3 .ui-collapsible-content {
  min-height: 9.94em;
  padding: 10px 5px 10px 5px;
}

.block .ui-collapsible-set .ui-collapsible-caption {
  padding-bottom: 10px;
  margin-bottom: -10px;
}

.block .ui-collapsible-content > .ui-listview {
  margin: -10px -5px -10px -5px;
}

.block > .ui-bar-c.ui-li-divider {
  margin: 5px 5px 0 3px;
  padding: .7em;
  font-size: 0.82em;
  /*text-align: left;*/
}

.block .ui-fixed {
  margin: 0 5px 12px 3px;
  padding: 10px 5px 10px 5px;
  min-height: 14.5em;
}

.block .ui-field-contain {
  margin: 8px 0 8px 0;
  padding: 0;
  text-align: left;
}

.block .ui-field-contain .note {
  text-align: right;
  margin-top: 0px;
  font-size: 12px;
}

.block .ui-field-contain input + .note {
  margin-top: 3px;
}



.color.debug, .signal.debug {
  background: #1af0f0;
}

.color.info, .signal.info {
  background: #3ad064;
}

.color.warning, .signal.warning {
  background: #f7cf57;
}

.color.error, .color.exception, .color.critical, .signal.error {
  background: #e03d3d;
}
/* ... */

